[package]
name = "x509-risczero-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2.1", features = ["full", "node-bindings"] }
anyhow = { version = "1.0.75" }
bonsai-sdk = { version = "0.7" }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
hex = { version = "0.4" }
log = { version = "0.4" }
tokio = { version = "1.35", features = ["full"] }
x509-parser = "0.16.0"